// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp('a');


      ↓ ↓ ↓ ↓ ↓ ↓

/a/;

`;

exports[`macros 2. macros: 2. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp('abc');


      ↓ ↓ ↓ ↓ ↓ ↓

/abc/;

`;

exports[`macros 3. macros: 3. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(['d', 'e', 'f']);


      ↓ ↓ ↓ ↓ ↓ ↓

/def/;

`;

exports[`macros 4. macros: 4. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(['d', 'e', 'f']);


      ↓ ↓ ↓ ↓ ↓ ↓

/def/;

`;

exports[`macros 5. macros: 5. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(capture('a'));


      ↓ ↓ ↓ ↓ ↓ ↓

/(a)/;

`;

exports[`macros 6. macros: 6. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(zeroOrMore('a'));


      ↓ ↓ ↓ ↓ ↓ ↓

/a*/;

`;

exports[`macros 7. macros: 7. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(oneOrMore('a'));


      ↓ ↓ ↓ ↓ ↓ ↓

/a+/;

`;

exports[`macros 8. macros: 8. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(optional('a'));


      ↓ ↓ ↓ ↓ ↓ ↓

/a?/;

`;

exports[`macros 9. macros: 9. macros 1`] = `


import { buildRegExp } from '../macro.js'
buildRegExp(choiceOf('a','b'));


      ↓ ↓ ↓ ↓ ↓ ↓

/a|b/;

`;
